# ATTPCode_public

./: .gitignore  Makefile.in  README.md  avl.h  avl_container.h  basic_defs.h  conf.cpp  conf.h  config.h.in  config_list.h  configure  configure.ac  driver.cpp  dummy_persistent_misra_gries.h  exact_query.cpp  exact_query.h  fd.cpp  fd.h  fenwick_tree.h  gen_configure.sh  gen_deps.sh  hashtable.h  heavyhitters.cpp  heavyhitters.h  lapack_wrapper.c  lapack_wrapper.h  min_heap.h  misra_gries.cpp  misra_gries.h  norm_sampling.cpp  norm_sampling.h  norm_sampling_wr.cpp  norm_sampling_wr.h  old_driver.cpp  pams.cpp  pams.h  pcm.cpp  pcm.h  perf_timer.cpp  perf_timer.h  (+18 more)
configs/: generate-fe-key-set-bitp.conf  generate-fe-key-set.conf  test-client-id-bitp-fe.conf  test-client-id-fe.conf  test-hh-attp.conf  test-hh-bitp.conf  test-matrix-sketch.conf  test-object-id-fe.conf
data_proc/: create_fe_data.cpp  create_fe_data.sh  gen_mat_data.sh  ground_truth_small.txt  insert_mem_stats.cpp  mat_queries.txt  time_serial_matrix.py
data_proc/world-cup/: .gitignore  client_id_attp_queries.txt  client_id_bitp_queries.txt  create_client_id_log.cpp  create_client_ip_log.cpp  create_object_id_log.cpp  object_id_attp_queries.txt  object_id_bitp_queries.txt  prepare_data.sh
